testsuite/tests/partial-sigs/should_fail/PatBind3.stderr

PatBind3.hs:6:12: error:
    • Couldn't match type ‘(Bool, _)’ with ‘Char’
      Expected type: Maybe ((Bool, _) -> Char)
        Actual type: Maybe ((Bool, _) -> (Bool, _))
    • In the expression: Just id
      In a pattern binding: Just foo = Just id
    • Relevant bindings include
        foo :: (Bool, _) -> Char (bound at PatBind3.hs:6:6)
